# aye-aye

./: .gitignore  AUTHORS  CMakeLists.txt  README  TODO
lang/: ayeaye.pot
share/aye-aye/languages/: c-generator  metadata  structure  structure.ayeaye  zut.aye  zut.ayeaye  zuttest.aye
share/gtksourceview-3.0/language-specs/: ayeaye-generator.lang  ayeaye-structure.lang  ayeaye.lang
src/: AyeAye.cpp  AyeAye.h  Exception.h  FileBuffer.cpp  FileBuffer.h  Language.cpp  Language.h  LanguageException.cpp  LanguageException.h  LanguageMetadata.h  LanguageMetadataParser.cpp  LanguageMetadataParser.h  LanguagePool.cpp  LanguagePool.h  LanguageStructure.cpp  LanguageStructure.h  LanguageStructureParser.cpp  LanguageStructureParser.h  Localization.cpp  Localization.h  Localization.hpp  Parameters.cpp  Parameters.h  ParametersException.h  Parser.cpp  Parser.h  ParserException.h  Source.cpp  Source.h  SourceException.cpp  SourceException.h  SourceNode.cpp  SourceNode.h  SourceParser.cpp  SourceParser.h  SourceStructure.cpp  SourceStructure.h  SyntacticNode.cpp  SyntacticNode.h  SyntacticTree.cpp  (+2 more)
test/: testC.c  testZut.zut  zut.zut  zuttest.zut
tmp/: arbre
tools/: clean.sh  clean_project.sh  copyright.sh  pot.sh  update_pot.sh
